firstphp/deset-loki.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: promtail
  namespace: php
spec:
  selector:
    matchLabels:
      name: promtail
  template:
    metadata:
      labels:
        name: promtail
    spec:
      containers:
        - name: promtail
          image: grafana/promtail:latest
          args:
            - "-config.file=/etc/promtail/config.yaml"
          volumeMounts:
            - name: log
              mountPath: /var/www/storage/logs
            - name: promtail-config
              mountPath: /etc/promtail
      volumes:
        - name: log
          persistentVolumeClaim:
            claimName: log-pv-claim
        - name: promtail-config
          configMap:
            name: promtail-config
