firstphp/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mysql-dep
  name: mysql-dep
  namespace: php
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-dep
  template:
    metadata:
      labels:
        app: mysql-dep
    spec:
      containers:
      - image: mysql:8.0
        name: mysql
        ports:
        - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mysql-svc
  name: mysql-svc
  namespace: php
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: mysql-dep
