firstphp/php.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: php-dep
  name: php-dep
  namespace: php
spec:
  selector:
    matchLabels:
      app: php-dep
  template:
    metadata:
      labels:
        app: php-dep 
    spec:
      containers:
      - image: 19840112/firstphp:0.0.1
        name: php-dep 
        ports:
        - containerPort: 80
        volumeMounts:
        - name: php-persistent-storage
          mountPath: /var/www
        - name: loki-config
          mountPath: /etc/loki
        - name: log-storage
          mountPath: /var/www/storage/logs
      volumes:
      - name: php-persistent-storage
        persistentVolumeClaim:
          claimName: php-pv-claim
      - name: loki-config
        configMap:
          name: loki-config
          defaultMode: 420
      - name: log-storage
        persistentVolumeClaim:
          claimName: log-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: php-svc
  name: php-svc
  namespace: php
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: php-dep
  type: ClusterIP
---
