firstphp/ingress.yml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: php
  namespace: php
spec:
  controller: "k8s.io/ingress-nginx"
  parameters:
    apiGroup: networking.k8s.io
    kind: Ingress
    name: php
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: php
  namespace: php
spec:
  ingressClassName: "php"
  rules:
  - host: errorstaff.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: php-svc
            port:
              number: 80
