firstphp/phping.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: php
  namespace: php
spec:
  ingressClassName: "nginx"
  rules:
  - host: errorstaff.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: php-svc 
            port:
              number: 80
